--- a/.github/workflows/rtp2httpd.yml
+++ b/.github/workflows/rtp2httpd.yml
@@ -9,8 +9,6 @@ jobs:
   build:
     name: ${{ matrix.arch }}-${{ matrix.sdk }}
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     strategy:
       fail-fast: false
       matrix:
@@ -52,19 +50,55 @@ jobs:
         with:
           name: ${{ matrix.arch }}-apk-packages
           path: bin/packages/${{ matrix.arch }}/action/*.apk
+
+  release:
+    name: Create Release
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: all-apks
           
-      - name: Upload to release assets
+      - name: Set release date
+        id: release_date
+        run: echo "date=$(date +%Y%m%d)" >> $GITHUB_OUTPUT
+        
+      - name: Create or update release
         if: github.event_name == 'workflow_dispatch' || startsWith(github.ref, 'refs/tags/v')
         run: |
+          # 准备所有 APK 文件的路径
+          APK_FILES=$(find all-apks -name "*.apk" -type f | tr '\n' ' ')
+          
           # 如果是从标签触发则上传到对应的 release
           if [[ "${{ github.ref }}" == refs/tags/* ]]; then
             TAG="${{ github.ref_name }}"
-            gh release upload --repo ${{ github.repository }} $TAG bin/packages/${{ matrix.arch }}/action/*.apk
+            
+            # 检查 release 是否已存在
+            if gh release view $TAG --repo ${{ github.repository }} &>/dev/null; then
+              echo "Release $TAG already exists, adding APK files to it"
+              gh release upload --repo ${{ github.repository }} $TAG $APK_FILES --clobber
+            else
+              echo "Creating new release $TAG"
+              gh release create $TAG --repo ${{ github.repository }} $APK_FILES --generate-notes
+            fi
           else
-            # 如果是手动触发或 push 触发则创建新的 release
-            RELEASE_DATE="$(date +%Y%m%d)"
+            # 对于手动触发或 push 触发，使用日期作为标记
+            RELEASE_DATE="${{ steps.release_date.outputs.date }}"
+            RELEASE_TAG="build-${RELEASE_DATE}"
             RELEASE_NAME="Build-${RELEASE_DATE}"
-            gh release create "build-${RELEASE_DATE}" --title "${RELEASE_NAME}" --repo ${{ github.repository }} bin/packages/${{ matrix.arch }}/action/*.apk --generate-notes
+            
+            # 检查 release 是否已存在
+            if gh release view $RELEASE_TAG --repo ${{ github.repository }} &>/dev/null; then
+              echo "Release $RELEASE_TAG already exists, adding APK files to it"
+              gh release upload --repo ${{ github.repository }} $RELEASE_TAG $APK_FILES --clobber
+            else
+              echo "Creating new release $RELEASE_TAG"
+              gh release create $RELEASE_TAG --title "${RELEASE_NAME}" --repo ${{ github.repository }} $APK_FILES --generate-notes
+            fi
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
