--- a/.github/workflows/rtp2httpd.yml
+++ b/.github/workflows/rtp2httpd.yml
@@ -6,9 +6,54 @@ on:
       - 'openwrt-support/**'  # 当 openwrt-support 路径有更改时触发
 
 jobs:
+  # 首先创建release
+  create_release:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    outputs:
+      release_tag: ${{ steps.create_release.outputs.release_tag }}
+    steps:
+      - name: Set release date
+        id: release_date
+        run: echo "date=$(date +%Y%m%d)" >> $GITHUB_OUTPUT
+        
+      - name: Generate release tag and name
+        id: create_release
+        run: |
+          # 获取当前日期和时间，格式为YYYY.MM.DD-HHMM
+          CURRENT_DATETIME=$(date '+%Y.%m.%d-%H%M')
+          
+          # 如果是从标签触发则使用标签名
+          if [[ "${{ github.ref }}" == refs/tags/* ]]; then
+            RELEASE_TAG="${{ github.ref_name }}"
+          else
+            # 对于手动触发或 push 触发，使用日期作为标记
+            RELEASE_TAG="build-${{ steps.release_date.outputs.date }}"
+          fi
+          
+          RELEASE_NAME="rtp2httpd-${CURRENT_DATETIME}"
+          
+          # 输出变量供后续job使用
+          echo "release_tag=${RELEASE_TAG}" >> $GITHUB_OUTPUT
+          
+          # 检查 release 是否已存在
+          if gh release view $RELEASE_TAG --repo ${{ github.repository }} &>/dev/null; then
+            echo "Release $RELEASE_TAG already exists"
+          else
+            echo "Creating new release $RELEASE_TAG"
+            gh release create $RELEASE_TAG --title "${RELEASE_NAME}" --repo ${{ github.repository }} --generate-notes
+          fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  # 然后构建并直接上传
   build:
+    needs: create_release
     name: ${{ matrix.arch }}-${{ matrix.sdk }}
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     strategy:
       fail-fast: false
       matrix:
@@ -24,7 +69,7 @@ jobs:
           
       - name: Override version number
         run: |
-          RELEASE_TAG="${{ github.ref_name }}"
+          RELEASE_TAG="${{ needs.create_release.outputs.release_tag }}"
           RELEASE_VERSION="${RELEASE_TAG#v}"
           # 如果不是从 release 触发，使用日期作为版本号
           if [[ "$RELEASE_TAG" == "$RELEASE_VERSION" ]]; then
@@ -45,79 +90,15 @@ jobs:
           BUILD_APK: true  # 启用 APK 构建而不是 IPK
           CONTAINER: openwrt/sdk
           
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4.6.2
-        with:
-          name: ${{ matrix.arch }}-apk-packages
-          path: bin/packages/${{ matrix.arch }}/action/*.apk
-
-  release:
-    name: Create Release
-    needs: build
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    steps:
-      - name: Download all artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: all-apks
-          merge-multiple: true
-          
-      - name: Display structure of downloaded files
-        run: ls -R all-apks
-        
-      - name: Set release date
-        id: release_date
-        run: echo "date=$(date +%Y%m%d)" >> $GITHUB_OUTPUT
-        
-      - name: Create or update release
-        if: github.event_name == 'workflow_dispatch' || startsWith(github.ref, 'refs/tags/v')
+      - name: Upload APK files directly to release
         run: |
-          # 打印文件结构以便调试
-          echo "Debug: Listing all APK files"
-          find all-apks -name "*.apk" -type f || true
-          
-          # 准备所有 APK 文件的路径
-          APK_FILES=$(find all-apks -name "*.apk" -type f | tr '\n' ' ' || echo "")
-          
-          # 检查是否找到了 APK 文件
-          if [ -z "$APK_FILES" ]; then
-            echo "警告: 未找到 APK 文件，可能需要检查构建过程"
-            APK_FILES="README.md" # 使用占位文件，防止命令失败
-            echo "这是一个自动生成的构建版本。APK 文件可能未能正确生成，请检查工作流日志。" > README.md
-          fi
-          
-          # 获取当前日期和时间，格式为YYYY.MM.DD-HHMM
-          CURRENT_DATETIME=$(date '+%Y.%m.%d-%H%M')
-          
-          # 如果是从标签触发则上传到对应的 release
-          if [[ "${{ github.ref }}" == refs/tags/* ]]; then
-            TAG="${{ github.ref_name }}"
-            RELEASE_NAME="rtp2httpd-${CURRENT_DATETIME}"
-            
-            # 检查 release 是否已存在
-            if gh release view $TAG --repo ${{ github.repository }} &>/dev/null; then
-              echo "Release $TAG already exists, adding files to it"
-              gh release upload --repo ${{ github.repository }} $TAG $APK_FILES --clobber
-            else
-              echo "Creating new release $TAG"
-              gh release create $TAG --title "${RELEASE_NAME}" --repo ${{ github.repository }} $APK_FILES --generate-notes
-            fi
+          APK_FILES=$(find bin/packages/${{ matrix.arch }}/action/ -name "*.apk" -type f)
+          if [ -n "$APK_FILES" ]; then
+            gh release upload --repo ${{ github.repository }} ${{ needs.create_release.outputs.release_tag }} $APK_FILES --clobber
           else
-            # 对于手动触发或 push 触发，使用日期作为标记
-            RELEASE_DATE="${{ steps.release_date.outputs.date }}"
-            RELEASE_TAG="build-${RELEASE_DATE}"
-            RELEASE_NAME="rtp2httpd-${CURRENT_DATETIME}"
-            
-            # 检查 release 是否已存在
-            if gh release view $RELEASE_TAG --repo ${{ github.repository }} &>/dev/null; then
-              echo "Release $RELEASE_TAG already exists, adding files to it"
-              gh release upload --repo ${{ github.repository }} $RELEASE_TAG $APK_FILES --clobber
-            else
-              echo "Creating new release $RELEASE_TAG"
-              gh release create $RELEASE_TAG --title "${RELEASE_NAME}" --repo ${{ github.repository }} $APK_FILES --generate-notes
-            fi
+            echo "Warning: No APK files found to upload"
+            echo "This is an automatically generated build. No APK files were generated." > build-issue.md
+            gh release upload --repo ${{ github.repository }} ${{ needs.create_release.outputs.release_tag }} build-issue.md --clobber
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
