--- a/.github/workflows/build-mvebu.yml
+++ b/.github/workflows/build-mvebu.yml
@@ -15,7 +15,7 @@ permissions:
 # 环境变量设置
 env:
   REPO_URL: https://github.com/immortalwrt/immortalwrt  # ImmortalWrt 源代码仓库地址
-  REPO_BRANCH: master  # 使用的分支
+  REPO_BRANCH: openwrt-24.10  # 使用的分支
   FEEDS_CONF: feeds.conf.default  # feeds 配置文件
   CONFIG_FILE: .config.mvebu  # 编译配置文件（根据需要修改）
   DIY_P1_SH: diy-part1-mvebu.sh  # 自定义脚本（在更新 feeds 前运行）
