--- a/.github/workflows/build-mvebu.yml
+++ b/.github/workflows/build-mvebu.yml
@@ -167,6 +167,7 @@ jobs:
         NETWORK_CONFIG_MVEBU: ${{ secrets.NETWORK_CONFIG_MVEBU }}
         FIREWALL_CONFIG_MVEBU: ${{ secrets.FIREWALL_CONFIG_MVEBU }}
         DHCP_CONFIG_MVEBU: ${{ secrets.DHCP_CONFIG_MVEBU }}
+        UPDATE_ROUTE: ${{ secrets.UPDATE_ROUTE }}
       run: |
         # 如果存在自定义文件，则移动到 immortalwrt/files 目录
         [ -e files ] && mv files immortalwrt/files
