--- a/.github/workflows/build-301w.yml
+++ b/.github/workflows/build-301w.yml
@@ -168,6 +168,7 @@ jobs:
         FIREWALL_CONFIG_301W: ${{ secrets.FIREWALL_CONFIG_301W }}
         DHCP_CONFIG_301W: ${{ secrets.DHCP_CONFIG_301W }}
         UPDATE_ROUTE: ${{ secrets.UPDATE_ROUTE }}
+        DDNS_301W: ${{ secrets.DDNS_301W }}
       run: |
         # 如果存在自定义文件，则移动到 immortalwrt/files 目录
         [ -e files ] && mv files immortalwrt/files
